--- a/PardCodeSeries/PardCodeSeries.vcxproj
+++ b/PardCodeSeries/PardCodeSeries.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="GEngine\vendor\GLAD\src\glad_wgl.c" />
     <ClCompile Include="GEngine\src\GEngine\Math\GVec4.cpp" />
     <ClCompile Include="GEngine\src\GEngine\Graphics\GVertexArrayObject.cpp" />
+    <ClCompile Include="GEngine\src\GEngine\Graphics\GShaderProgram.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GEngine\include\GEngine\Console\GConsole.h" />
@@ -174,10 +175,13 @@
     <ClInclude Include="GEngine\vendor\GLAD\include\KHR\khrplatform.h" />
     <ClInclude Include="GEngine\include\GEngine\Math\GVec4.h" />
     <ClInclude Include="GEngine\include\GEngine\Graphics\GVertexArrayObject.h" />
+    <ClInclude Include="GEngine\include\GEngine\Graphics\GShaderProgram.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
     <None Include="cpp.hint" />
+    <None Include="Shaders\Fragment\triangleFrag.frag" />
+    <None Include="Shaders\Vertex\triangleVert.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
